<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/lyn_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/onezero"
        android:background="#F4F4F4"
        android:orientation="vertical"
        android:weightSum="3" >

        <RelativeLayout
            android:id="@+id/rel_top"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fivezero" >

            <com.cbt.fonts.RobotoRegular
                android:id="@+id/txt_categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/categories"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#565656"
                android:textSize="@dimen/onesix" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/lyn_top"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/linear_appGuide"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/one"
                android:layout_marginLeft="@dimen/onezero"
                android:layout_marginRight="@dimen/one"
                android:layout_weight="1"
                android:background="#009ab6"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/guide_icon"
                    android:layout_width="@dimen/sixthree"
                    android:layout_height="@dimen/sixthree"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/twozero"
                    android:scaleType="fitXY"
                    android:src="@drawable/info" />

                <com.cbt.fonts.RobotoRegular
                    android:id="@+id/txt_guide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/onezero"
                    android:text="@string/app_guide"
                    android:textColor="@color/white"
                    android:textSize="@dimen/onefour" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_inventory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/one"
                android:layout_marginRight="@dimen/onezero"
                android:layout_weight="1"
                android:background="#d43700"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/inventory_icon"
                    android:layout_width="@dimen/sixthree"
                    android:layout_height="@dimen/sixthree"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/twozero"
                    android:scaleType="fitXY"
                    android:src="@drawable/beckk" />

                <com.cbt.fonts.RobotoRegular
                    android:id="@+id/txt_inventory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/onezero"
                    android:text="@string/beck_inventory"
                    android:textColor="@color/white"
                    android:textSize="@dimen/onefour" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyn_middle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/linear_techniques"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/one"
                android:layout_marginLeft="@dimen/onezero"
                android:layout_marginRight="@dimen/one"
                android:layout_weight="1"
                android:background="#ea9d00"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/techniques_icon"
                    android:layout_width="@dimen/sixthree"
                    android:layout_height="@dimen/sixthree"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/twozero"
                    android:scaleType="fitXY"
                    android:src="@drawable/cbt" />

                <com.cbt.fonts.RobotoRegular
                    android:id="@+id/txt_techniques"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/onezero"
                    android:text="@string/cbt_techniques"
                    android:textColor="@color/white"
                    android:textSize="@dimen/onefour" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_charts"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/one"
                android:layout_marginRight="@dimen/onezero"
                android:layout_weight="1"
                android:background="#82b937"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/charts_icon"
                    android:layout_width="@dimen/sixthree"
                    android:layout_height="@dimen/sixthree"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/twozero"
                    android:scaleType="fitXY"
                    android:src="@drawable/chartsss" />

                <com.cbt.fonts.RobotoRegular
                    android:id="@+id/txt_charts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/onezero"
                    android:text="@string/Charts"
                    android:textColor="@color/white"
                    android:textSize="@dimen/onefour" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyn_bottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/linear_review"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/onezero"
                android:layout_marginRight="@dimen/one"
                android:layout_weight="1"
                android:background="#9435d7"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/review_icon"
                    android:layout_width="@dimen/sixthree"
                    android:layout_height="@dimen/sixthree"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/twozero"
                    android:scaleType="fitXY"
                    android:src="@drawable/statusss" />

                <com.cbt.fonts.RobotoRegular
                    android:id="@+id/txt_review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/onezero"
                    android:text="@string/status_review"
                    android:textColor="@color/white"
                    android:textSize="@dimen/onefour" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_setting"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/onezero"
                android:layout_weight="1"
                android:background="#515874"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/setting_icon"
                    android:layout_width="@dimen/sixthree"
                    android:layout_height="@dimen/sixthree"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/twozero"
                    android:scaleType="fitXY"
                    android:src="@drawable/settings" />

                <com.cbt.fonts.RobotoRegular
                    android:id="@+id/txt_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/onezero"
                    android:text="Setting"
                    android:textColor="@color/white"
                    android:textSize="@dimen/onefour" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <!--<FrameLayout-->
    <!--android:id="@+id/container_main"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent" />-->

</RelativeLayout>


